@@ -1,3 +1,3 @@
 <key_list>
- <key>parent_base_amount_uid | category,catalog/uid/z_related_parent_base_amount</key>
+ <key>parent_base_contribution_uid | category,catalog/uid/z_related_parent_base_contribution</key>
 </key_list>
