@@ -1,1 +1,1 @@
-erp5_mysql_innodb/z_related_parent_base_amount
+erp5_mysql_innodb/z_related_parent_base_contribution
