@@ -1,1 +1,1 @@
-parent_base_amount_uid | category,catalog/uid/z_related_parent_base_amount
+parent_base_contribution_uid | category,catalog/uid/z_related_parent_base_contribution
