@@ -1,5 +1,6 @@
 2009-01-15 fabien
 * update bt format
+* change the related key because of the changes of uses of base_amount
 
 2008-09-16 Kazuhiko
 * revise pay_sheet_transaction_builder using new API.
